# rollup-dbt

./: .env  .env.example  .gitignore  README.md  README.qmd  TODO.md  TODO_EP_INCREMENTAL.md  TODO_int_blending_fix.md  config.example.py  config.py.example  config.toml  example-anti-join.py  file.csv  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rms_analysis_list.csv  rollup.example.toml  rollup.spec  test_dlt_connections.py  todo  zensical.toml
.dlt/: config.toml
air/output/: rds_events.csv
app/: checkpoint.py  cli.py  dlt_config.py  source_cli.py
app/dlt_sources/: __init__.py
app/pipelines/: __init__.py
cli/: __main__.py  checkpoint.py
cli/dlt_sources/: csv_sources.py  destinations.py
cli/pipelines/: load_risklink_elt.py  load_verisk_ylt.py  run_risklink_simulation.py
config/: __init__.py  config.toml  loader.py  source_config.py  sources.toml
data/ep_summaries/: README.md  schema.yaml  validnator.yml
data/output/: schema.yaml
data/pipeline2/: schema.yaml
data/seeds/: README.md  blending_weights.csv  fineart_adjustments.csv  fx_rates.csv  perils.csv  rollup_scope.csv  schema.yaml
data/ylt/: README.md  schema.yaml  validnator-risklink.yml  validnator-verisk.yml
dbt/: .env.example  .user.yml  TODO.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: ep_calculator.sql  metric_utils.sql
diagrams/: gannt.mmd
docs/: README.md  adding-lobs-perils.md  analysis-scripts.md  architecture.md  building.md  calculation-reference.md  calculations.md  cat-model-schematic.md  core-concepts.md  data-requirements.md  data-sources.md  demo-deck.html  demo-deck.md  developer-guide.md  ep-summaries.md  factor-chain.md  file-formats.md  first-run.md  index.md  installation.md  load-data.md  operating-modes.md  pipeline-workflow.html  programmatic-api.md  quickstart.md  runtime.md  schema-contracts.md  troubleshooting.md  utilities.md  what-is-it.md  windows-install.md
docs/project/: pre-render.js  readme.qmd
docs/stylesheets/: extra.css
jan-rollup/: air_ep_vw.sql  readme.md
jan-rollup/duckdb_schema/: table_definitions.csv  tables.csv  view_definitions.csv
jan-rollup/ep_summaries/: Hiscox RNL26 - List of Portfolios and Analyses (RMS).xlsx  Hiscox RNL26 RMS by LOB (EDM & RDM).xlsx
jan-rollup/lib-scripts/: extract_elt.py
lib/: export_global_exposures.py  extract__rms_elt.py  run_rms_sim.py  simulation__generate_losses_elt_to_base_ylt.py  simulation__generate_ylt_from_elt.py
output/: schema.yaml
pipelines/: README.md  azure-pipelines.yml  summarize_pytest.py
pipelines/templates/: setup-uv.yml
polars/: README.md  RH-TODO-DATA.md  analyst-demo.html  calculations.md  conftest.py  pitch.css  pitch.html  pitch.qmd  pitch.scss
polars/docs/: README.md  architecture.md  (+2 more)
rollup/: packages.yml
scripts/: build.py  generate_synthetic_risklink_ylt.py
sql/: 01_inventory.sql  02_ep_report.sql  02_portfolio_summaries.sql  03_mts_wide_lob_peril_waterfall.sql  03_top_losses.sql  04_mts_long_lob_peril_waterfall.sql  04_waterfall_and_wide_checks.sql  05_fanout_audit.sql  05_seed_lookup_checks.sql  06_input_seed_qa.sql  99_export_example.sql  README.md
tests/: conftest.py  test_api.py  test_build_script.py  test_clean_pipeline_layout.py  test_cli.py  test_cli_cleanup.py  test_cli_docs.py  test_cli_entrypoint.py  test_cli_sql.py  test_config.py  test_dataiku_runtime.py  test_dlt_connections.py  test_docs_cli.py  test_docs_content.py  test_duckdb_export.py  test_ep_blending.py  test_ep_models.py  test_ep_summary_conversion.py  test_ep_summary_generator.py  test_ep_summary_sources.py  test_fx_and_metrics.py  test_generate_ep_summaries_cli.py  test_lazy_fanout_outputs.py  test_logging.py  test_map_losses_lognormal.py  test_mart_writes.py  test_model.py  test_model_schema_validation.py  test_modelled_dimension_coverage.py  test_parquet_writer.py  test_perils_seed.py  test_pipeline_e2e_validation.py  test_pipeline_fuzz.py  test_pipeline_modelled_dimension_coverage.py  test_pipeline_schema_yaml.py  test_pyinstaller_build_config.py  test_pytest_categories.py  test_resources.py  test_risklink_fanout_join.py  test_seed_contracts.py  (+14 more)
utils/: simulate.py
(+333 files in other folders)
