[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollup"
version = "0.12.0"
description = "Retail rollup pipeliner"
readme = "README.md"
requires-python = "==3.13.*"
authors = [ { name = "Richard Hampton" } ]



dependencies = [
    "tomli-w>=1.2.0",
    "duckdb>=1.4.0",
    "polars>=1.20.0",
    "pyarrow>=22.0.0",
    "pyodbc",

]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rollup"]

[dependency-groups]
build = [
    "pyinstaller>=6",
]
dev = [
    "zensical==0.0.33",     # 0.0.34 introduced a scheduler regression that produces empty site/ — see zensical#594
    "pytest>=9.0.2",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "build>=1.5.0",
    "validnator",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
validnator = { path = "../../dev/validnator", editable = true }


[tool.hatch.build.targets.wheel]
packages = ["src/rollup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: end-to-end test that requires external resources (Docker, network). Skipped by default; opt-in with `--run-integration` or `-m integration`.",
    "fuzz: property-based test using Hypothesis. Skipped by default; opt-in with `--run-fuzz` or `-m fuzz`.",
]

[tool.ruff]
exclude = ["jan-rollup", "utils", "scripts/build.py"]
