[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollup"
version = "0.12.0"
description = "Catastrophe-model rollup pipeline for validated local datasets"
readme = "README.md"
requires-python = "==3.13.*"
authors = [ { name = "Richard Hampton" } ]

dependencies = [
    "duckdb>=1.4.0",
    "polars>=1.20.0",
]

[project.scripts]
rollup = "rollup.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rollup", "rollup.*"]

[dependency-groups]
dev = [
    "zensical==0.0.33", # 0.0.34 introduced a scheduler regression that produces empty site/ — see zensical#594
    "pytest>=9.0.2",
    "hypothesis>=6.148.0",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "fuzz: property-based test using Hypothesis. Skipped by default; opt-in with `--run-fuzz` or `-m fuzz`.",
]
