[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollup"
version = "0.12.0"
description = "Catastrophe-model rollup pipeline for validated local datasets"
readme = "README.md"
requires-python = "==3.13.*"
authors = [ { name = "Richard Hampton" } ]

dependencies = [
    "duckdb>=1.4.0",
    "polars>=1.20.0",
]

[project.scripts]
rollup = "rollup.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rollup", "rollup.*"]

[dependency-groups]
dev = [
    "zensical==0.0.33", # 0.0.34 introduced a scheduler regression that produces empty site/ — see zensical#594
    "pytest>=9.0.2",
    "hypothesis>=6.148.0",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "fuzz: property-based test using Hypothesis. Skipped by default; opt-in with `--run-fuzz` or `-m fuzz`.",
    "integration: synthetic cross-boundary or filesystem test. Skipped by default; opt-in with `--run-integration` or `-m integration`.",
]

[[tool.mypy.overrides]]
module = ["rollup.model", "rollup.staging.*", "rollup.intermediate.*", "rollup.marts.*"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = ["explicit-override"]
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
